# mixer

./: pyproject.toml  setup.py  tags
docs/: conf.py
mixer/: _compat.py  _faker.py  auto.py  factory.py  main.py  markov.py  mix_types.py
mixer/backend/: django.py  flask.py  marshmallow.py  mongoengine.py  peewee.py  pony.py  sqlalchemy.py
tests/: test_auto.py  test_django.py  test_faker.py  test_flask.py  test_main.py  test_marshmallow.py  test_mongoengine.py  test_peewee.py  test_pony.py  test_sqlalchemy.py
tests/django_app/: __init__.py  models.py  settings.py
tests/django_app/migrations/: 0001_initial.py
