[tool.poetry]
name = "mixer"
version = "0.1.0"
description = ""
authors = ["ssfdust <ssfdust@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
faker = "^4.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-sugar = "^0.9.4"
django = "^3.1.1"
flask = "^1.1.2"
marshmallow = "^3.7.1"
sqlalchemy = "^1.3.19"
flask-sqlalchemy = "^2.4.4"
mongoengine = "^0.20.0"
peewee = "^3.13.3"
pony = "^0.7.13"
psycopg2-binary = "^2.8.5"
black = "^20.8b1"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
